--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,10 +14,11 @@ source:
 build:
   noarch: python
   number: 0
-  script: python setup.py install --record record.txt
+  script: python -m pip install . --no-deps --ignore-installed
 
 requirements:
   build:
+    - pip
     - python
     - setuptools
 
