--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "texttable" %}
-{% set version = "1.3.1" %}
-{% set sha256 = "0f75f5838b775bddc19f72c5bf50eb74be3815eb505ed3084e4666ce2e6c3259" %}
+{% set version = "1.4.0" %}
+{% set sha256 = "95e8cfe85f8395a7eacdfbc8f09d885b9ef3a6ac6ead0364ea721de1127aa36b" %}
 
 package:
   name: {{ name|lower }}
@@ -43,3 +43,4 @@ extra:
   recipe-maintainers:
     - williamjamir
     - nicoddemus
+    - micknudsen
