Fix license identifier

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,8 +31,8 @@ test:
 
 about:
   home: https://github.com/foutaise/texttable/
-  license: LGPL-3.0
-  license_family: LGPL-3.0-only
+  license: LGPL-3.0-only
+  license_family: LGPL
   license_file: {{ environ["RECIPE_DIR"] }}/LICENSE
   summary: Python module for creating simple ASCII tables
   description: texttable is a module to generate a formatted text table, using ASCII characters.
